fixed visual bug when card had too much text

--- a/client/src/components/meal-card/MealCard.scss
+++ b/client/src/components/meal-card/MealCard.scss
@@ -26,7 +26,7 @@
         background-color: rgba(50, 50, 50, 0.5);
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
     }
 
@@ -51,5 +51,6 @@
     &__btns {
         display: flex;
         width: 100%;
+        margin-bottom: 1rem;
     }
 }
